--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.student-form-input {
+  @apply border border-gray-300 rounded-md p-2 w-full focus:outline-none focus:border-orange;
+}
