--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,12 @@
 .picture-button {
   @apply border-[1px] border-black rounded-3xl px-4 py-2 cursor-pointer flex justify-center items-center  hover:border-2 shadow-xl;
 }
+
+.box-student {
+  h1 {
+    @apply text-black font-bold;
+  }
+}
+
+.container-data {
+}
