--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
 .picture-button {
   @apply border-[1px] border-black rounded-3xl px-4 py-2 cursor-pointer flex justify-center items-center  hover:border-2 shadow-xl;
 }
+.teste {
+  @apply text-white;
+}
 
 .box-student {
   h1 {
@@ -31,4 +34,22 @@
   position: absolute;
   bottom: 3%;
   left: 45%;
+}
+
+.banner-container {
+  position: relative;
+}
+
+.banner-image {
+  filter: grayscale(100%) contrast(100%) brightness(75%) sepia(100%);
+}
+
+.banner-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 165, 0, 0.5); /* Laranja com 50% de opacidade */
 }
