--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   }
 }
 
+.form-button {
+  @apply bg-orange px-4 py-2 rounded-3xl hover:bg-orange/80 hover:scale-105;
+}
+
 .react-datepicker__year-dropdown
   .react-datepicker__year-option:first-child::before {
   content: "\25B2";
